--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ section {
     cursor: pointer;
     border: none;
 }
-@media screen and (min-width:768px) {
+@media only screen and (min-width:768px) {
     .open-menu-button {
         display: none;
     }
@@ -207,7 +207,7 @@ section {
         color: #404bbf;
     }
 }
-@media screen and (min-width: 1158px) {
+@media only screen and (min-width: 1158px) {
     .logo {
         margin-right: 76px;
     }
@@ -222,7 +222,7 @@ section {
         line-height: 1.5;
     }
 }
-/* .backdrop {
+.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -253,7 +253,7 @@ section {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button {
+.modal-header-close-button {
     position: absolute;
     top: 24px;
     right: 24px;
@@ -283,7 +283,7 @@ section {
 .modal-close-button:hover>.modal-close-icon,
 .modal-close-button:focus>.modal-close-icon {
     fill: #ffffff;
-} */
+}
 /* /HEADER */
 /* FIRST SECTION */
 .first-section {
@@ -300,7 +300,7 @@ section {
     width: 100%;
     margin: 0 auto;
 }
-@media screen and (min-device-pixel-ratio: 2),
+@media only screen and (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
     .first-section {
@@ -458,10 +458,14 @@ section {
     column-gap: 24px;
     row-gap: 72px;
     }
-}
-.benefit {
+    .our-benefits {
+     width: calc((100% - 24px) / 2);
+        }
+    .benefit {
     text-align: left;
-}
+                }
+    }
+
 
 
 @media only screen and (min-width: 1158px) {
@@ -473,17 +477,17 @@ section {
     .our-benefits {
      width: calc((100% - 72px) / 4);
     }
-}
-.benefit-icon {
-    display: flex;
-}
-.benefit {
+    .benefit-icon {
+     display: flex;
+        }
+    .benefit {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-}
-.deskription {
+                }
+    .deskription {
     font-weight: 400;
+       }
 }
 
 /* /SECOND SECTION */
@@ -594,10 +598,539 @@ section {
 
 /* FOURTH SECTION */
 .our-portfolio {
-    background-color: #fff;
     display: flex;
-    row-gap: 48px;
+    flex-direction: column;
     flex-wrap: wrap;
     column-gap: 24px;
+    row-gap: 48px;
+}
+.portfolio {
+    background-color: #ffffff;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-photo-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+}
+.portfolio:hover,
+.portfolio:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio:hover .portfolio-photo-overlay,
+.portfolio:focus .portfolio-photo-overlay {
+    transform: translateY(0%);
+}
+.portfolio-photo {
+    position: relative;
+    overflow: hidden;
+}
+.name-portfolio {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 8px;
+}
+@media only screen and (min-width: 768px) {
+    .our-portfolio {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+
+    .portfolio {
+        width: calc((100% - 24px) / 2);
+    }
+
+}
+@media only screen and (min-width: 1158px) {
+
+    .portfolio {
+     width: calc((100% - 48px) / 3);
+        box-shadow: none;
+}
 }
 /* /FOURTH SECTION */
+
+/* FOOTER */
+.page-footer {
+    display: block;
+    background: #2E2F42;
+    max-width: 320px;
+    padding: 96px 0;
+}
+.footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+}
+.web-logo-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    margin-bottom: 16px;
+}
+.footer-logo-container {
+    text-align: center;
+}
+.logo-footer {
+    color: #F4F4FD;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    display: inline-block;
+}
+.conclusion {
+    color: #F4F4FD;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    max-width: 264px;
+}
+.footer-social-media-container {
+    display: inline-block;
+    align-items: center;
+    margin: 72px auto;
+}
+.footer-social-media-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+.footer-social-media-item {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-media-list {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-media-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-media-link:hover,
+.footer-social-media-link:focus {
+    background-color: #31d0aa;
+}
+
+.social-icon {
+    fill: #F4F4FD;
+    display: flex;
+    justify-content: center;
+}
+.form-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.footer-form-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.footer-form {
+    gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.footer-form-label {
+    display: flex;
+}
+
+.footer-form-input {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 288px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    padding-left: 16px;
+}
+
+.footer-form-input::placeholder {
+    color: #ffffff;
+}
+
+.footer-form-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    min-width: 165px;
+    height: 40px;
+    background-color: #4d5ae5;
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    margin: 0 auto;
+    border: none;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-button:hover,
+.footer-form-button:focus {
+    background-color: #404BBF;
+}
+
+.button-icon {
+    margin-left: 16px;
+    fill: #fff;
+}
+@media only screen and (min-width: 768px) {
+.page-footer {
+    display: flex;
+        max-width: 768px;
+        flex-direction: column;
+    }
+    .footer-container {
+        justify-content: start;
+        padding-left: 108px;
+        gap: 72px 24px;
+    }
+    .footer-form {
+        flex-wrap: nowrap;
+        margin-right: 24px;
+    }
+     .footer-form-title {
+        text-align: left;
+     }
+     .footer-logo-container{
+        text-align: left;
+     }
+     .footer-social-media-title {
+        text-align: left;
+     }
+    .footer-social-media-container {
+        margin: 0;
+         }
+         .footer-form {
+            flex-wrap: nowrap;
+         }
+    .footer-form-input {
+        width: 264px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .page-footer {
+        max-width: 1158px;
+        }
+    .footer-container {
+    display: flex;
+    margin: 0 auto;
+    align-items: baseline;
+    padding-left: 15px;
+    gap: 0; 
+     }
+
+   .form-container {
+    margin-left: auto;
+   }
+   .footer-form-title {
+       margin-left: 79px;
+   }
+   .footer-form {
+       gap: 24px;
+       display: flex;
+       justify-content: space-between;
+   }
+   .footer-form-input {
+   margin-left: 80px;
+   }
+   }
+
+/* /FOOTER */
+/* MODAL */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    padding: 72px 16px 24px 16px;
+    width: 288px;
+    min-height: 623px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fcfcfc;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+.modal-close-btn {
+    fill: #2e2f42;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    padding: 0;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #e7e9fc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.icon-close-btn {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-close-btn:hover>.icon-close-btn,
+.modal-close-btn:focus>.icon-close-btn {
+    fill: #ffffff;
+}
+
+.form-element {
+    margin-bottom: 8px;
+}
+
+.input-label {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+
+}
+
+.input-wrap {
+    position: relative;
+}
+
+.form-input {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus,
+.text-msg:focus {
+    border-color: #4d5ae5;
+}
+
+.form-element-comment {
+    margin-bottom: 16px;
+}
+
+.form-icon {
+    fill: #2e2f42;
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus+.form-icon {
+    fill: #4d5ae5;
+}
+
+.text-msg {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    outline: transparent;
+    resize: none;
+    padding: 8px 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.text-msg:focus {
+    border-color: #4D5AE5;
+}
+
+.text-msg::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.checkbox-input:checked+.checkbox-label .form-own-checkbox {
+    background-color: #404bbf;
+    fill: #f4f4fd;
+    border: none;
+}
+
+.checkbox-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    line-height: 1.17;
+
+}
+
+.privacy-policy-link {
+    line-height: 1.3;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.form-own-checkbox {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    cursor: pointer;
+    fill: transparent;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-wrap {
+    margin-bottom: 24px;
+}
+
+.form-button {
+    display: block;
+    margin: 0 auto;
+    border-radius: 4px;
+    font-family: "Roboto", sans-serif;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover,
+.form-button:focus {
+    background-color: #404bbf;
+}
+@media only screen and (min-width: 768px) {
+    .modal {
+            padding: 72px 24px 24px 24px;
+            width: 408px;
+            min-height: 584px;
+        }
+}
+
+@media only screen and (min-width: 1158px) {
+.modal {
+        padding: 72px 24px 24px 24px;
+        width: 408px;
+        min-height: 584px;
+    }
+}
+/* MODAL */
