--- a/css/desktop-styles.css
+++ b/css/desktop-styles.css
@@ -99,18 +99,18 @@ section {
     left: 0;
     bottom: -1px;
 }
-.adress {
+.address {
 font-style: normal;
 margin-left: auto;
 
 }
-.adress-list {
+.address-list {
     gap: 40px;
     display: flex;
     
 }
 
-.adress-link {
+.address-link {
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -118,8 +118,8 @@ color: #434455;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.adress-link:hover,
-.adress-link:focus {
+.address-link:hover,
+.address-link:focus {
 color: #404bbf;
 }
 /* /HEADER */
