--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,7 @@ section {
         line-height: 1.5;
     }
 }
+/* MODAL HEADER */
 .backdrop {
     position: fixed;
     top: 0;
@@ -242,12 +243,13 @@ section {
 }
 
 .modal-header {
+    padding-left: 16px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 408px;
-    min-height: 584px;
+    width: 320px;
+    min-height: 640px;
     background-color: #fcfcfc;
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -260,7 +262,6 @@ section {
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    padding: 0;
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #e7e9fc;
@@ -270,8 +271,8 @@ section {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover,
-.modal-close-button:focus {
+.modal-header-close-button:hover,
+.modal-header-close-button:focus {
     background-color: #404bbf;
     border: none;
 }
@@ -284,7 +285,92 @@ section {
 .modal-close-button:focus>.modal-close-icon {
     fill: #ffffff;
 }
+.menu-address {
+margin-top: 168px;
+}
+.menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 72px;
+}
+.menu-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-link:hover,
+.menu-link:focus {
+    color: #2e2f42;
+}
+.menu-address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-bottom: 48px;
+    font-style: normal;
+    margin-left: auto;
+}
+.menu-address-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-address-link:hover,
+.menu-address-link:focus {
+    color: #404bbf;
+}
+.menu-icon-list {
+display: flex;
+gap: 40px;
+
+}
+.menu-icon-item {
+width: 40px;
+height: 40px;
+}
+.menu-icon-link {
+width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-icon-link:hover,
+.menu-icon-link:focus {
+    background-color: #404bbf;
+}
+.menu-social-icon {
+    width: 24px;
+    height: 24px;
+    fill: white;
+}
+@media only screen and (min-width:768px) {
+    .modal-header {
+display: none;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .modal-header {
+display: none;
+    }
+}
+/* /MODAL HEADER */
+
 /* /HEADER */
+
 /* FIRST SECTION */
 .first-section {
     background: #2E2F42;
@@ -909,7 +995,7 @@ section {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-open {
+.backdrop {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
@@ -1062,10 +1148,9 @@ section {
 .checkbox-label {
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.2;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    line-height: 1.17;
 
 }
 
