--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ button {
 
 @media only screen and (min-width: 1158px) {
 .container {
-    max-width: 1440px;
+    max-width: 1158px;
     padding: 0 15px;
     }
 }
@@ -963,6 +963,7 @@ display: none;
     
     .footer-container {
     display: flex;
+    flex-wrap: nowrap;
     margin: 0 auto;
     align-items: baseline;
     padding-left: 15px;
